entity_macros/tests/ui/derive/ent/missing-database.stderr
error: No database field provided
  --> $DIR/missing-database.rs:4:1
   |
4  | / struct TestEnt {
5  | |     #[ent(id)]
6  | |     id: Id,
7  | |
...  |
12 | |     last_updated: u64,
13 | | }
   | |_^
